--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "vue": "^3.2.47",
